--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,18 +1,10 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background: #2a2a2d;
-  color: #f4f4f4;
+body, body #__next, html {
+    height: 100%;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+#__next {
+    flex-direction: column;
+    justify-content: space-between;
+    display: flex;
 }
 
-* {
-  box-sizing: border-box;
-}
